plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    compileOnly'org.projectlombok:lombok:1.18.24'
    implementation 'org.apache.poi:poi:5.4.0'
    implementation 'org.apache.poi:poi-ooxml:5.4.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testImplementation 'org.apache.commons:commons-lang3:3.10'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
}
